added bottom nav to index page, also...
... added a 'favourites' button to the index page. We can use it if we have time. I probably added other things but it's been a while since I last pushed to the server and I forgot what they were. haha...

--- a/plantsuwa/app/views/current_plants/index.html.erb
+++ b/plantsuwa/app/views/current_plants/index.html.erb
@@ -40,6 +40,9 @@
 
 
 <% end %>
+<%= render 'action_tab_unknown' %>
+<%= render 'action_tab_new' %>
+<%= render 'bottom_tabs_index' %>
 
 
 <div style="height: 600px"></div>
