--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
 
       <% if !yield(:prev_page).blank? %>
         <%= link_to yield(:prev_link) do %>
-          <p class="navbar-brand navbar-prev-page-block"><span class="glyphicon glyphicon-chevron-left" style="color: #aaa"></span>&nbsp;&nbsp;<%= truncate(yield(:prev_page), length: 15) %></p>
+          <p class="navbar-brand navbar-prev-page-block"><span class="glyphicon glyphicon-chevron-left" style="color: #aaa"></span>&nbsp;&nbsp;<%= truncate(yield(:prev_page), length: 20, escape: false) %></p>
         <% end %>
       <% else %>
         <%= link_to 'http://www.uwa.edu.au', target: '_blank' do %>
@@ -19,7 +19,7 @@
 
 
       <div class="navbar-brand navbar-title-block">
-        <p style="text-align: center; color: white"><strong><%= truncate(small_title(yield(:title)), length: 20) %></strong></p>
+        <p style="text-align: center; color: white"><strong><%= truncate(small_title(yield(:title)), length: 20, escape: false) %></strong></p>
       </div>
 
       <div style="width: 100px; position: absolute; right: 0;">
