--- a/plantsuwa/app/views/current_plants/_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_form.html.erb
@@ -1,5 +1,3 @@
-<%= render 'bottom_tabs' %>
-
 <div class="padding-mobile">
 
   <%= simple_form_for(@current_plant, html: { class: 'form-horizontal' }, defaults: { input_html: { class: 'form-control' } }) do |f| %>
@@ -140,7 +138,7 @@
   <div style="height: 40px"></div>
 
 </div> <!-- padding-mobile -->
-
+<%= render 'bottom_tabs_show' %>
 
 
 
