--- a/plantsuwa/app/assets/stylesheets/media-queries.css
+++ b/plantsuwa/app/assets/stylesheets/media-queries.css
@@ -4,6 +4,14 @@
   }
 }
 
+@media (max-width: 400px) {
+  .navbar p {
+    font-size: 90%;
+
+  }
+
+}
+
 @media (min-width: 768px) {
   .navbar-right {
     position: fixed;
