--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -357,3 +357,11 @@ textarea {
   position: absolute;
   left: 0;
 }
+
+.display-photo-right {
+  float: right;
+  margin-left: 10px;
+  border: 1px solid #ccc;
+  max-width: 60%;
+  max-height: 60%;
+}
