--- a/plantsuwa/app/views/current_plants/_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_form.html.erb
@@ -1,6 +1,6 @@
 <div class="padding-mobile">
 
-  <%= simple_form_for(@current_plant, html: { class: 'form-horizontal' }, defaults: { input_html: { class: 'form-control' } }) do |f| %>
+  <%= simple_form_for(@current_plant, html: { class: 'form-horizontal' , :'accept-charset' => "UTF-8"}, defaults: { input_html: { class: 'form-control' } }) do |f| %>
     <% if @current_plant.errors.any? %>
       <div class="alert alert-danger" role="alert">
         <div id="error_explanation">
@@ -43,11 +43,11 @@
       <fieldset>
 	      <legend>Architectural</legend>
       	  <%= f.association :climates, :as => :check_boxes %>
-	        <%= f.input  :environment, hint: 'What sort of environment does this plant enjoy?' %>
-      	  <%= f.input  :horticulture %>
-      	  <%= f.input  :architectural_uses %>
-	        <%= f.input  :architectural_info %>
-		    <%= f.association :soil_types, :as => :check_boxes %>
+	        <%= f.input  :environment, hint: 'What sort of environment does this plant enjoy?', as: :text %>
+      	  <%= f.input  :horticulture, as: :text %>
+      	  <%= f.input  :architectural_uses, as: :text %>
+	        <%= f.input  :architectural_info, as: :text %>
+		      <%= f.association :soil_types, :as => :check_boxes %>
       </fieldset>
     </div>
     
@@ -56,12 +56,12 @@
       <fieldset>
 	      <legend>Environmental</legend>
       	  <%= f.input  :culture, hint: 'What role does this plant play in different World cultures?', as: :text %> 
-      	  <%= f.input  :conservation %> 
-      	  <%= f.input  :wildlife, hint: 'Does this plant attract any fauna?' %>
+      	  <%= f.input  :conservation, as: :text %> 
+      	  <%= f.input  :wildlife, hint: 'Does this plant attract any fauna?', as: :text %>
 	        <%= f.association :origins, :as => :radio_buttons %>
       	  <%= f.input  :location_name, hint: 'Where can this plant be found locally?'%> 
-      	  <%= f.input  :general_info %>
-      	  <%= f.input  :additional_info %> 
+      	  <%= f.input  :general_info, as: :text %>
+      	  <%= f.input  :additional_info, as: :text %> 
       	  <%= f.input  :discovered_by, hint: 'Biologist credited with discovering this plant.' %>
 	        <%= f.input  :named_by, hint: 'Biologist credited with naming this plant'%>
       </fieldset>
@@ -131,15 +131,16 @@
 
     <hr/>
 
-    <%= render :partial => 'action_tabs_form', :locals => { :f => f } %>
+<%= render :partial => 'action_tabs_form', :locals => { :f => f } %>
 
   <% end %>
 
   <div style="height: 40px"></div>
 
+    
+
 </div> <!-- padding-mobile -->
 <%= render 'bottom_tabs_show' %>
-
 
 
 
