--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -12,6 +12,36 @@ p, div, td, label, dd, dt {
 	font-family: 'Oxygen', sans-serif;
 }
 
+p {
+  text-align: justify;
+  text-justify: inter-word;
+}
+
+
+table td, th {
+  border-left: 0 !important;
+  border-right: 0 !important;
+}
+
+
+table th .bordered {
+  border-left: 1px solid gray !important;
+  border-right: 0 !important;
+}
+
+table td span {
+  color: #BFBFBF;
+  margin-top: 2px;
+}
+
+table td img {
+  width: 32px;
+}
+
+table th img {
+  width: 24px;
+}
+
 .main { 
 	padding: 25px;
 }
@@ -56,6 +86,16 @@ td {
 	border: 15px;
 }
 
+.navbar-brand-custom {
+  margin-right: 5px;
+  float: right;
+  padding-left: 5px;
+  padding-right: 5px
+}
+
+.nav {
+  background: black;
+}
 
 body {
 	height: 100%;
