--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -1,71 +1,56 @@
-
-
-
-
-  <nav class="navbar navbar-inverse navbar-fixed-top">
-    <div class="container-fluid">
-
-      <% if !yield(:prev_page).blank? %>
-        <%= link_to yield(:prev_link) do %>
-          <p class="navbar-brand navbar-prev-page-block"><span class="glyphicon glyphicon-chevron-left" style="color: #aaa"></span>&nbsp;&nbsp;<%= truncate(yield(:prev_page), length: 20, escape: false) %></p>
-        <% end %>
-      <% else %>
-        <%= link_to 'http://www.uwa.edu.au', target: '_blank' do %>
-          <div class="navbar-brand navbar-uwacrest-block">
-                <%= image_tag 'uwacrest-small.gif', width:"30px", alt:"UWA Logo", style: 'margin-top: -10px; margin-left: 12px' %>
-           </div>
-        <% end %>  
-      <% end %>
-
-
-      <div class="navbar-brand navbar-title-block">
-        <p style="text-align: center; color: white"><strong><%= truncate(small_title(yield(:title)), length: 20, escape: false) %></strong></p>
-      </div>
-
-      <div style="width: 200px; position: absolute; right: 0;">
-
-		    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-navbar-collapse">
-			    <span class="sr-only">Toggle navigation</span>
-			    <span class="icon-bar"></span>
-			    <span class="icon-bar"></span>
-			    <span class="icon-bar"></span>
-		    </button>
-
-        <%= link_to search_current_plants_path do %>
-          <p class="navbar-brand" style="margin-right: 5px; float: right; padding-left: 5px; padding-right: 5px"><span class="glyphicon glyphicon-search"></span></p>
-        <% end %>
-        <%= link_to root_path do %>
-          <p class="navbar-brand" style="margin-right: 5px; float: right; padding-left: 5px; padding-right: 5px"><span class="glyphicon glyphicon-home"></span></p>
-        <% end %>
-
-      </div>
-
-
+<nav class="navbar navbar-inverse navbar-fixed-top">
+	<div class="container-fluid">
+	  <% if !yield(:prev_page).blank? %>
+	    <%= link_to yield(:prev_link) do %>
+	      <p class="navbar-brand navbar-prev-page-block"><span class="glyphicon glyphicon-chevron-left" style="color: #aaa"></span>&nbsp;&nbsp;<%= truncate(yield(:prev_page), length: 20, escape: false) %></p>
+	    <% end %>
+	  <% else %>
+	    <%= link_to 'http://www.uwa.edu.au', target: '_blank' do %>
+	      <div class="navbar-brand navbar-uwacrest-block">
+	        <%= image_tag 'uwacrest-small.gif', width:"30px", alt:"UWA Logo", style: 'margin-top: -10px; margin-left: 12px' %>
+	      </div>
+	    <% end %>  
+	  <% end %>
+	  <div class="navbar-brand navbar-title-block">
+	    <p style="text-align: center; color: white"><strong><%= truncate(small_title(yield(:title)), length: 20, escape: false) %></strong></p>
+	  </div>
+	  <div style="width: 200px; position: absolute; right: 0;">
+	    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-navbar-collapse">
+		    <span class="sr-only">Toggle navigation</span>
+		    <span class="icon-bar"></span>
+		    <span class="icon-bar"></span>
+		    <span class="icon-bar"></span>
+	    </button>
+	    <%= link_to search_current_plants_path do %>
+	      <p class="navbar-brand navbar-brand-custom"><span class="glyphicon glyphicon-search"></span></p>
+	    <% end %>
+	    <%= link_to root_path do %>
+	      <p class="navbar-brand navbar-brand-custom"><span class="glyphicon glyphicon-home"></span></p>
+	    <% end %>
+	  </div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
 		<div class="collapse navbar-collapse" id="bs-navbar-collapse">
-		  <ul class="nav navbar-nav navbar-right" style="background: black;">
+		  <ul class="nav navbar-nav navbar-right">
 
 			  <% if signed_in? %>
 				  <li><%= link_to log_out_path, method: "delete" do %>
-                Logged in as <%= current_user.username %> (Log out)
-              <% end %>
-          </li>
-        <% else %>
-          <li><%= link_to 'Sign up', sign_up_path %></li>
-        <% end %>
+	              Logged in as <%= current_user.username %> (Log out)
+	            <% end %>
+	        </li>
+	      <% else %>
+	        <li><%= link_to 'Sign up', sign_up_path %></li>
+	      <% end %>
 
 			  <% if not signed_in? %>
 			    <li><%= link_to 'Log in', log_in_path %></li>
-        <% end %>
+	      <% end %>
 
 			  <li><a href="#">Site Map</a></li>
 			  <li><a href="#">Contact</a></li>
 		  </ul>  
-
 		</div><!-- /.navbar-collapse -->
-
-  </div>
-  </nav>
+	</div>
+</nav>
 
 
 
