--- a/plantsuwa/app/views/current_plants/_bottom_tabs_index.html.erb
+++ b/plantsuwa/app/views/current_plants/_bottom_tabs_index.html.erb
@@ -1,4 +1,4 @@
-<div id="btn-type" class="info-tab info-tab-current" style="width: 33.3333333%;">
+<div id="btn-type" class="info-tab info-tab-current" style="left: 0; width: 33.3333333%;">
   <p>Type</p>
 </div>
 <div id="btn-atoz" class="info-tab" style="left: 33.3333333%; width: 33.3333333%;">
