--- a/plantsuwa/app/views/current_plants/_bottom_tabs_show.html.erb
+++ b/plantsuwa/app/views/current_plants/_bottom_tabs_show.html.erb
@@ -1,4 +1,4 @@
-<div id="btn-photos" class="info-tab">
+<div id="btn-photos" class="info-tab" style="left: 0">
   <p>Imgs</p>
 </div>
 <div id="btn-descriptions" class="info-tab info-tab-current" style="left: 25%">
