--- a/plantsuwa/app/views/current_plants/index.html.erb
+++ b/plantsuwa/app/views/current_plants/index.html.erb
@@ -3,7 +3,7 @@
 <% provide(:prev_link, root_path) %>
 
 
-<div class="plant-index-tab" style="background: #FFF8D9; position: fixed; top: 50px;">
+<div class="plant-index-tab">
   <p><strong>Climbers</strong></p>
 </div>
 
