--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -1,5 +1,20 @@
 body, .navbar {
   min-width: 280px;
+  background: #ddd;  
+}
+
+body {
+  height: 100%;
+}
+
+
+.container {
+  background: white;
+  height: 100%;
+  padding: 0;
+  height: 100%;
+  box-shadow: 4px 0 10px #ccc, -4px 0 10px #ccc;
+  min-height: 100vh;
 }
 
 
@@ -82,6 +97,12 @@ td {
 
 .navbar-inverse {
 	background: black;
+
+  background: -moz-linear-gradient(top, #2E2E2E 0%, black);
+  background: -webkit-gradient(linear, left top, left bottom, from(#2E2E2E), to(black));
+  background: -o-linear-gradient(top, #2E2E2E 0%, black);
+  background: -linear-gradient(top, #2E2E2E 0%, black);
+
 	border-radius: 0px;
 	border: 15px;
 }
@@ -91,14 +112,6 @@ td {
   float: right;
   padding-left: 5px;
   padding-right: 5px
-}
-
-.nav {
-  background: black;
-}
-
-body {
-	height: 100%;
 }
 
 footer {
@@ -318,7 +331,6 @@ textarea {
   width: 100%;
   height: 64px;
   border-top: 1px solid #bbb;
-  border-right: 1px solid #bbb;
   position: relative;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
@@ -361,6 +373,10 @@ textarea {
   padding: 4px 0;
   z-index: 1000;
   border-bottom: 1px solid #bbb;
+  background: #FFF8D9;
+  position: fixed;
+  top: 50px;
+  overflow: hidden;
 }
 
 .plant-index-tab p {
@@ -379,6 +395,11 @@ textarea {
   margin-left: -10px;
   font-size: small;
   width: 100%;
+}
+
+.navbar-title-block p {
+  text-align: center;
+  color: white;
 }
 
 .navbar-prev-page-block {
@@ -402,6 +423,6 @@ textarea {
   float: right;
   margin-left: 10px;
   border: 1px solid #ccc;
-  max-width: 60%;
-  max-height: 60%;
+  max-width: 50%;
+  max-height: 50%;
 }
