--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -7,12 +7,12 @@
 	  <% else %>
 	    <%= link_to 'http://www.uwa.edu.au', target: '_blank' do %>
 	      <div class="navbar-brand navbar-uwacrest-block">
-	        <%= image_tag 'uwacrest-small.gif', width:"30px", alt:"UWA Logo", style: 'margin-top: -10px; margin-left: 12px' %>
+	        <%= image_tag 'uwacrest-small.png', width:"30px", alt:"UWA Logo", style: 'margin-top: -10px; margin-left: 12px' %>
 	      </div>
 	    <% end %>  
 	  <% end %>
 	  <div class="navbar-brand navbar-title-block">
-	    <p style="text-align: center; color: white"><strong><%= truncate(small_title(yield(:title)), length: 20, escape: false) %></strong></p>
+	    <p><strong><%= truncate(small_title(yield(:title)), length: 20, escape: false) %></strong></p>
 	  </div>
 	  <div style="width: 200px; position: absolute; right: 0;">
 	    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-navbar-collapse">
