--- a/plantsuwa/app/views/layouts/application.html.erb
+++ b/plantsuwa/app/views/layouts/application.html.erb
@@ -29,12 +29,22 @@
 
   </head>
   <body>
-
     <%= render 'layouts/navbar' %>  
+    
 
-    <div style="height: 64px"></div>
+    
 
-  	  <%= yield %>
+
+      <div class="container">
+        <div style="height: 64px"></div>
+        <% if @admin_page %>
+          <div class="padding-mobile">
+            <%= yield %>
+          </div>
+        <% else %>
+    	    <%= yield %>
+        <% end %>    
+      </div>
       <!-- Uncomment for Debug <%= debug(params) if Rails.env.development? %> -->
 
 
