--- a/plantsuwa/app/views/climates/index.html.erb
+++ b/plantsuwa/app/views/climates/index.html.erb
@@ -1,3 +1,7 @@
+<% provide(:title, 'Climates List') %>
+<% provide(:prev_page, 'Admin') %>
+<% provide(:prev_link, root_path) %> <!-- Change later -->
+
 <h1>Listing Climates</h1>
 
 <%= link_to 'New Climate', new_climate_path %>
