--- a/plantsuwa/app/views/current_plants/_action_tabs_form.html.erb
+++ b/plantsuwa/app/views/current_plants/_action_tabs_form.html.erb
@@ -2,7 +2,7 @@
 <div class="action-tab">
   <div class="center-wrapper">
     <div style="display: inline-block;">
-      <p><span class="glyphicon glyphicon-remove" style="color: #B80000"></span>&nbsp;&nbsp;Cancel</p>
+      <p><i class="fa fa-remove" style="color: #B80000"></i>&nbsp;&nbsp;Cancel</p>
     </div>
   </div>
 </div>
@@ -12,7 +12,7 @@
 <div class="action-tab" style="left: 50%">
   <div class="center-wrapper">
     <div style="display: inline-block;">
-      <p><span class="glyphicon glyphicon-ok" style="color: #00B800"></span>&nbsp;&nbsp;Done</p>
+      <p><i class="fa fa-check" style="color: #00B800"></i>&nbsp;&nbsp;Done</p>
     </div>
   </div>
 </div>
