--- a/plantsuwa/app/assets/stylesheets/custom.css
+++ b/plantsuwa/app/assets/stylesheets/custom.css
@@ -111,22 +111,13 @@ td {
   margin-right: 5px;
   float: right;
   padding-left: 5px;
-  padding-right: 5px
+  padding-right: 1px;
+  margin-top: -2px;
 }
 
-footer {
-	border-top: 5px solid gray;
-	background: #F5F5F5;
-	padding: 20px 5px;
-	height: 80px;
-	/* A sneaky way to ensure that the footer always goes to the bottom of the page. Haha. */
-	box-shadow: 0px 500px 0px 500px #F5F5F5;
 
-}
-
-footer p, a {
+a {
 	color: #474747;
-	
 }
 
 
@@ -257,12 +248,8 @@ textarea {
   border-bottom: 1px solid #ccc;
   float: left;
   padding: 3px 5px;
-
   border-right: 1px solid #ccc;
   background: #eee;
-
-	/*box-shadow: 0 -2px 8px #ccc;  */
- 
   position: fixed;
   height: 30px;
   bottom: 40px;
@@ -330,7 +317,7 @@ textarea {
 .plant-index-box {
   width: 100%;
   height: 64px;
-  border-top: 1px solid #bbb;
+  border-top: 1px solid #ccc;
   position: relative;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
@@ -339,7 +326,7 @@ textarea {
 .plant-index-box-photo {
   width: 64px;
   height: 64px;
-  border-right: 1px solid #bbb;
+  border-right: 1px solid #ccc;
 	-webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
 	-moz-box-sizing: border-box;    /* Firefox, other Gecko */
 	box-sizing: border-box;         /* Opera/IE 8+ */
@@ -372,7 +359,7 @@ textarea {
   height: 24px;
   padding: 4px 0;
   z-index: 1000;
-  border-bottom: 1px solid #bbb;
+  border-bottom: 1px solid #ccc;
   background: #FFF8D9;
   position: fixed;
   top: 50px;
@@ -388,6 +375,13 @@ textarea {
   color: #bbb !important;
 }
 
+.navbar-collapse :hover {
+  -webkit-transition: color 0.2s linear;
+  -moz-transition: color 0.2s linear;
+  -ms-transition: color 0.2s linear;
+  -o-transition: color 0.2s linear;
+  transition: color 0.2s linear;
+}
 
 
 .navbar-title-block {
@@ -417,6 +411,63 @@ textarea {
   width: 80px;
   position: absolute;
   left: 0;
+}
+
+.navbar-admin-tab {
+  width: 120px;
+  height: 30px;
+  background: black;
+  color: white;
+  position: fixed;
+  right: 2%;
+  top: 50px;
+  border-bottom-left-radius: 8px;
+  border-bottom-right-radius: 8px;
+  z-index: 1050;
+}
+.navbar-admin-tab p {
+  color: white;
+  text-align: center;
+  font-size: x-small;
+  margin-top: 6px;
+  font-family: 'Montserrat', sans-serif; 
+}
+
+.navbar-admin-tab p:hover {
+  color: #FFB300;
+  -webkit-transition: color 0.2s linear;
+  -moz-transition: color 0.2s linear;
+  -ms-transition: color 0.2s linear;
+  -o-transition: color 0.2s linear;
+  transition: color 0.2s linear;
+}
+
+
+
+.navbar-admin-tab:before {
+  left: -30px;
+  background: url('tab-corner-left-2.png');
+}
+
+.navbar-admin-tab:after {
+  right: -30px;
+  top: 0;
+  background: url('tab-corner-right-4.png');
+}
+
+.navbar-admin-tab:before, .navbar-admin-tab:after {
+  position: absolute;
+  display: block;
+  content: "";
+  width: 30px;
+  height: 30px;  
+  background-size: 30px 30px;
+  background-repeat: no-repeat;  
+}
+
+
+.navbar-admin-tab a {
+  text-decoration: none; 
 }
 
 .display-photo-right {
