--- a/plantsuwa/app/views/current_plants/_action_tab_edit.html.erb
+++ b/plantsuwa/app/views/current_plants/_action_tab_edit.html.erb
@@ -2,7 +2,7 @@
 	<div class="action-tab">
 	  <div class="center-wrapper">
 	    <div style="display: inline-block;">
-	      <p><span class="glyphicon glyphicon-edit" style="color: #0000F5"></span>&nbsp;&nbsp;Edit plant</p>
+	      <p><i class="fa fa-edit" style="color: #0000F5"></i>&nbsp;&nbsp;Edit plant</p>
 	    </div>
 	  </div>
 	</div>
