--- a/plantsuwa/app/views/current_plants/_action_tab_favourites.html.erb
+++ b/plantsuwa/app/views/current_plants/_action_tab_favourites.html.erb
@@ -2,7 +2,7 @@
 	<div class="action-tab">
 	  <div class="center-wrapper">
 	    <div style="display: inline-block;">
-	      <p><span class="glyphicon glyphicon-star" style="color: #FF9100"></span>&nbsp;&nbsp;Favourites</p>
+	      <p><i class="fa fa-star" style="color: #FF9100"></i></span>&nbsp;&nbsp;Favourites</p>
 	    </div>
 	  </div>
 	</div>
