--- a/plantsuwa/app/views/current_plants/_action_tab_new.html.erb
+++ b/plantsuwa/app/views/current_plants/_action_tab_new.html.erb
@@ -2,7 +2,7 @@
   <div class="action-tab" style="left: 50%">
     <div class="center-wrapper">
       <div style="display: inline-block;">
-        <p><span class="glyphicon glyphicon-tree-deciduous" style="color: #006300"></span>&nbsp;&nbsp;New plant</p>
+        <p><i class="fa fa-tree" style="color: #006300"></i></span>&nbsp;&nbsp;New plant</p>
       </div>
     </div>
   </div>
