--- a/plantsuwa/app/views/layouts/_navbar.html.erb
+++ b/plantsuwa/app/views/layouts/_navbar.html.erb
@@ -2,12 +2,14 @@
 	<div class="container-fluid">
 	  <% if !yield(:prev_page).blank? %>
 	    <%= link_to yield(:prev_link) do %>
-	      <p class="navbar-brand navbar-prev-page-block"><span class="glyphicon glyphicon-chevron-left" style="color: #aaa"></span>&nbsp;&nbsp;<%= truncate(yield(:prev_page), length: 20, escape: false) %></p>
+	    	<div class="navbar-brand navbar-prev-page-block">
+	     		<i class="fa fa-chevron-left"></i>&nbsp;&nbsp;<%= truncate(yield(:prev_page), length: 20, escape: false) %>
+	      </div>
 	    <% end %>
 	  <% else %>
 	    <%= link_to 'http://www.uwa.edu.au', target: '_blank' do %>
 	      <div class="navbar-brand navbar-uwacrest-block">
-	        <%= image_tag 'uwacrest-small.png', width:"30px", alt:"UWA Logo", style: 'margin-top: -10px; margin-left: 12px' %>
+	        <%= image_tag 'uwacrest-small-2.png', width:"30px", alt:"UWA Logo", style: 'margin-top: -10px; margin-left: 12px' %>
 	      </div>
 	    <% end %>  
 	  <% end %>
@@ -22,10 +24,10 @@
 		    <span class="icon-bar"></span>
 	    </button>
 	    <%= link_to search_current_plants_path do %>
-	      <p class="navbar-brand navbar-brand-custom"><span class="glyphicon glyphicon-search"></span></p>
+	      <p class="navbar-brand navbar-brand-custom" style="padding-right: 9px"><i class="fa fa-search"></i></p>
 	    <% end %>
 	    <%= link_to root_path do %>
-	      <p class="navbar-brand navbar-brand-custom"><span class="glyphicon glyphicon-home"></span></p>
+	      <p class="navbar-brand navbar-brand-custom"><i class="fa fa-home fa-lg"></i></p>
 	    <% end %>
 	  </div>
 		<!-- Collect the nav links, forms, and other content for toggling -->
@@ -34,7 +36,13 @@
 
 			  <% if signed_in? %>
 				  <li><%= link_to log_out_path, method: "delete" do %>
-	              Logged in as <%= current_user.username %> (Log out)
+	            	<% if is_admin?%>
+	            		Logged in as <span style="color: #FFB300"><i class="fa fa-star"></i>&nbsp;<%= current_user.username %></span> (Log out)
+	            	<% elsif is_trusted? %>
+	            		Logged in as <span style="color: #268BFF"><i class="fa fa-star-o"></i>&nbsp;<%= current_user.username %></span> (Log out)
+	            	<% else %>
+	            		Logged in as <%= current_user.username %></span> (Log out)
+	            	<% end %>
 	            <% end %>
 	        </li>
 	      <% else %>
@@ -51,6 +59,20 @@
 		</div><!-- /.navbar-collapse -->
 	</div>
 </nav>
+<% if is_admin? %>
+	<div class="navbar-admin-tab">
+		<% if @admin_page %>
+			<%= link_to current_plants_path do %>
+				<p><i class="fa fa-tree"></i>&nbsp;&nbsp;Plants List</p>
+			<%end%>
+		<% else %>
+			<%= link_to climates_path do %>
+				<p><i class="fa fa-gavel"></i>&nbsp;&nbsp;Administration</p>
+			<%end%>
+		<% end %>
+	</div>
+
+<% end %>
 
 
 
